--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
       <p id="maxAltitude">Calculating...</p>
       <div style="position: relative; height:100%; width:90%">
-        <canvas id="resultsChart"></canvas>
+        <canvas id="resultsChart" width="700" height="300"></canvas>
       </div>
       
       
